Stablize the outline code a little.

The outline code sometimes gives bad results, so by making the operation
less complex, we'll get better results and less trouble with the shape
not drawing.

BUG:473164


(cherry picked from commit 59137b2c8b99ce94fbc66dd86389fccbf8f14138)